fix css and breadcrumb

--- a/module/user_profile/Components/ListTab/UserInfor/index.scss
+++ b/module/user_profile/Components/ListTab/UserInfor/index.scss
@@ -1,5 +1,5 @@
 .user-profile-tab-container {
-  padding-right: 5%;
+  // padding-right: 5%;
 
   .formik-user-profile-container {
     margin-top: 30px;
