--- a/module/manager_permission/index.scss
+++ b/module/manager_permission/index.scss
@@ -1,5 +1,6 @@
 .home-container {
   padding-bottom: 100px;
+  margin-right: -30px;
   .header-home-page {
     display: flex;
     justify-content: space-between;
@@ -14,14 +15,16 @@
   }
   .home-list-book {
     margin-top: 30px;
-    display: flex;
-    flex-wrap: wrap;
-
+    display: grid;
+    grid-template-columns: repeat(auto-fill,180px);
+    justify-content: center;
+    gap: 16px 20px;
+    margin-bottom: 30px;
     .item-book {
       width: 180px;
       height: 340px;
-      margin-right: 20px;
-      margin-bottom: 30px;
+      // margin-right: 20px;
+      // margin-bottom: 30px;
       display: flex;
       flex-direction: column;
       justify-content: center;
