--- a/module/user_profile/Components/TableSale/index.scss
+++ b/module/user_profile/Components/TableSale/index.scss
@@ -1,3 +1,8 @@
 .item-trade-buy-container {
-
+    .ant-table-thead{
+        display: none;
+    }
+    .ant-table-cell{
+        border: none;
+    }
 }
