--- a/styles/components/_wrapper.scss
+++ b/styles/components/_wrapper.scss
@@ -1,5 +1,11 @@
 #__next {
   height: 100%;
+  overflow: hidden;
+  .require{
+    color:red;
+    margin-left: 3px;
+    font-size: 15px;
+  }
 }
 
 .wrapper {
