--- a/module/home/index.scss
+++ b/module/home/index.scss
@@ -1,5 +1,3 @@
-
-
 .swiper {
   width: 100%;
   height: 100%;
@@ -29,12 +27,12 @@
   .introduce {
     position: relative;
     .background-image-home {
-      background-image: url("https://cafebiz.cafebizcdn.vn/162123310254002176/2020/7/18/photo-1507842217343-583bb7270b66-15950834286661091221208-15950835397121305942663.jpg") ;
+      background-image: url("https://cafebiz.cafebizcdn.vn/162123310254002176/2020/7/18/photo-1507842217343-583bb7270b66-15950834286661091221208-15950835397121305942663.jpg");
       height: 400px;
       width: 100%;
       margin-top: 55px;
       //opacity: 0.5;
-      filter:brightness(50%);
+      filter: brightness(50%);
     }
 
     .text-introduce-detail {
@@ -71,7 +69,8 @@
             width: 170px;
             padding: 15px;
 
-            .text-title-category, .buy {
+            .text-title-category,
+            .buy {
               font-size: 15px;
               font-weight: 500;
               text-align: center;
@@ -87,24 +86,24 @@
     margin-top: 30px;
     padding: 0 15%;
 
-      .title {
-        display: flex;
-        justify-content: center;
+    .title {
+      display: flex;
+      justify-content: center;
 
-        h3 {
-          width: 350px;
-          //background-color:  gray;
-          border-bottom: 2px solid #008bcf;
-        }
+      h3 {
+        width: 350px;
+        //background-color:  gray;
+        border-bottom: 2px solid #008bcf;
       }
+    }
 
-      .desciption {
-        p {
-          text-align: center;
-          margin-top: 5px;
-          font-size: 16px;
-          color: #555;
-        }
+    .desciption {
+      p {
+        text-align: center;
+        margin-top: 5px;
+        font-size: 16px;
+        color: #555;
       }
+    }
   }
 }
