--- a/components/Layout/Sidebar/index.scss
+++ b/components/Layout/Sidebar/index.scss
@@ -1,7 +1,7 @@
 .sidebar-container {
   //width: 200px;
   .menu {
-    height: calc(100vh - 105px );
+    height: calc(100vh - 105px);
     overflow-y: scroll;
     position: fixed;
     top: 85px;
@@ -13,7 +13,6 @@
     background-color: darkgrey;
   }
   .menu::-webkit-scrollbar-thumb {
-    box-shadow: inset 0 0 6px #1890FF;
+    box-shadow: inset 0 0 6px #1890ff;
   }
-
 }
