--- a/module/home/Components/CarouselComponent/index.scss
+++ b/module/home/Components/CarouselComponent/index.scss
@@ -1,5 +1,3 @@
-
-
 .swiper {
   width: 100%;
   height: 100%;
@@ -23,8 +21,6 @@
   object-fit: cover;
 }
 
-
-
 .carousel-component {
   margin-top: 30px;
   padding: 0 15%;
@@ -45,13 +41,14 @@
             display: -webkit-box;
             font-size: 16px;
             line-height: 1.3;
-            -webkit-line-clamp: 2;  /* số dòng hiển thị */
+            -webkit-line-clamp: 2; /* số dòng hiển thị */
             -webkit-box-orient: vertical;
             overflow: hidden;
             text-overflow: ellipsis;
           }
 
-          .text-title-category, .buy {
+          .text-title-category,
+          .buy {
             font-size: 15px;
             font-weight: 500;
             text-align: center;
@@ -61,4 +58,3 @@
     }
   }
 }
-
