--- a/styles/components/_navbar.scss
+++ b/styles/components/_navbar.scss
@@ -34,7 +34,7 @@
       margin-left: 8px;
 
       .ant-btn {
-        background-color: #F6E104;
+        background-color: #f6e104;
       }
     }
   }
