add frame page ( fix )

--- a/module/home/Components/CarouselComponent/index.scss
+++ b/module/home/Components/CarouselComponent/index.scss
@@ -35,6 +35,7 @@
 
         .item-slide {
           width: 170px;
+          margin-bottom: 28px;
           padding: 15px;
 
           .text-title-category {
