add frame page ( fix )

--- a/module/self_book/index.scss
+++ b/module/self_book/index.scss
@@ -21,6 +21,7 @@
       .action-item {
         width: 70%;
         position: relative;
+        display: flex;
 
         .icon-add {
           position: absolute;
