--- a/styles/components/_navbar.scss
+++ b/styles/components/_navbar.scss
@@ -85,6 +85,9 @@
         text-decoration: underline;
         cursor: pointer;
       }
+      .ant-space-item{
+        color: #fff;
+      }
     }
   }
 }
