--- a/module/user_profile/Components/ListTab/Address/index.scss
+++ b/module/user_profile/Components/ListTab/Address/index.scss
@@ -1,55 +1,27 @@
 .address-tab-container {
   padding: 0 20px;
 
-  .main {
-    display: flex;
-    .contact {
-      width: 43%;
-      padding: 10px 2%;
-      margin: 0 2%;
-      background-color: #f0f2f5;
-      border-radius: 12px;
-
-      .formik-contact-tab-container {
-        .contact-tab-container {
-          .form-item {
-            .item-detail {
-              margin-top: 20px;
-            }
-          }
-        }
-      }
-    }
-    .address {
-      width: 57%;
-      padding: 10px 2%;
-      margin: 0 2%;
-      background-color: #f0f2f5;
-      border-radius: 12px;
-
-      .formik-address-tab-container {
-        margin-top: 15px;
-        width: 100%;
-        .address-tab-container {
-          .form-item {
-            display: flex;
-            margin-bottom: 20px;
-
-            .title {
-              width: 30%;
-            }
-            .item-detail {
-              width: 80%;
-            }
-          }
-        }
-      }
-    }
-  }
   .lineHorizoltal {
     height: 1px;
     background-color: black;
     margin-top: 30px;
     margin-bottom: 10px;
+  }
+  .icon-edit{
+    font-size: large;
+    color: green;
+    padding: 4px;
+    cursor: pointer;
+  }
+  .icon-delete{
+    font-size: large;
+    color: red;
+    padding: 4px;
+    margin-left: 24px;
+    cursor: pointer;
+  }
+  .text-bold{
+    font-size: 14px;
+    font-weight: 500;
   }
 }
